# codeRec

./: media_service.thrift
config/: service-config.json
gen-cpp/: RecommenderService.cpp  media_service_types.cpp  media_service_types.h
gen-lua/: media_service_RecommenderService.lua  media_service_ttypes.lua
gen-py/media_service/: __init__.py
nginx-web-server/conf/: nginx.conf
nginx-web-server/lua-scripts/: test.lua
nginx-web-server/lua-scripts/api/recommender_service/: get.lua
nginx-web-server/lua-scripts/wrk2-api/cast-info/: write.lua
nginx-web-server/lua-scripts/wrk2-api/movie/: register.lua
nginx-web-server/lua-scripts/wrk2-api/movie-info/: write.lua
nginx-web-server/lua-scripts/wrk2-api/plot/: write.lua
nginx-web-server/lua-scripts/wrk2-api/review/: compose.lua
nginx-web-server/lua-scripts/wrk2-api/user/: register.lua
src/: CMakeLists.txt
src/RecommenderService/: CMakeLists.txt  RecommenderHandler.h  RecommenderService.cpp
